images overflow on articles fixed

--- a/blog/static/blog/css/styles.css
+++ b/blog/static/blog/css/styles.css
@@ -189,7 +189,7 @@ body{
   padding: 20px;
   line-height: 1.6rem;
   background-color: white;
-  overflow:scroll;
+  /* overflow:scroll; */
 }
 .blogdetails_related_articles>div:hover{
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
